# wine-market-analysis

./: .gitignore  README.md  pyproject.toml  requirements.txt  streamlit.py
app/: tab_analyse.py  tab_home.py  tab_presentation.py
